--- a/docker-proxy/3x-ui/3x-ui.env
+++ b/docker-proxy/3x-ui/3x-ui.env
@@ -46,8 +46,9 @@ subKeyFile=
 subUpdates=1
 subEncrypt="true"
 subShowInfo="true"
-subURI="https://${WEBDOMAIN}/${URI_SUB_PATH}"
-subJsonURI="https://${WEBDOMAIN}/${URI_JSON_PATH}"
+subURI="https://${WEBDOMAIN}${URI_SUB_PATH}"
+subJsonEnable="true"
+subJsonURI="https://${WEBDOMAIN}${URI_JSON_PATH}"
 subJsonFragment=
 subJsonNoises=
 subJsonMux=
