--- a/script/template/docker.env.template
+++ b/script/template/docker.env.template
@@ -37,6 +37,7 @@ URI_TRAEFIK_DASHBOARD=${URI_TRAEFIK_DASHBOARD}
 
 # Caddy
 PORT_LOCAL_CADDYWEB=${PORT_LOCAL_CADDYWEB}
+PORT_LOCAL_SUB2SING=${PORT_LOCAL_SUB2SING}
 
 # DOZZLE
 URI_DOZZLE=${URI_DOZZLE}
@@ -55,7 +56,7 @@ PORT_LOCAL_XHTTP=${PORT_LOCAL_XHTTP}
 PORT_LOCAL_VISION=${PORT_LOCAL_VISION}
 
 # LAMPAC
-PORT_LAMPAC=${PORT_LAMPAC}
+PORT_LAMPAC=9118
 
 # CROWDSEC
 PORT_LOCAL_CROWDSEC_API=${PORT_LOCAL_CROWDSEC_API}
@@ -65,6 +66,9 @@ PORT_LOCAL_CROWDSEC_PROMETHEUS=${PORT_LOCAL_CROWDSEC_PROMETHEUS}
 CROWDSEC_API_KEY_CADDY=${CROWDSEC_API_KEY_CADDY}
 CROWDSEC_API_KEY_TRAEFIK=${CROWDSEC_API_KEY_TRAEFIK}
 CROWDSEC_API_KEY_FIREWALL=${CROWDSEC_API_KEY_FIREWALL}
+
+# SUB2SING
+URI_SUB2SING=${URI_SUB2SING}
 
 # AdGuard_Home
 URI_ADGUARD_PANEL=${URI_ADGUARD_PANEL}
