--- a/docker-proxy/caddy/config/Caddyfile
+++ b/docker-proxy/caddy/config/Caddyfile
@@ -28,10 +28,11 @@ import *.caddy
 	}
 }
 
-:{$PORT_TEST} {
+:{$PORT_LOCAL_SUB2SING} {
 	encode gzip zstd
 
 	route {
+
 		crowdsec
 		appsec
 
@@ -41,6 +42,7 @@ import *.caddy
 			path {$URI_JSON_PATH}*
 			header Accept *text/html*
 		}
+
 		handle @subjson-html {
 			rewrite * /index_sub.html
 			templates
@@ -51,16 +53,18 @@ import *.caddy
 			path {$URI_JSON_PATH}*
 			not header Accept *text/html*
 		}
+
 		handle @subjson-api {
 			uri strip_prefix {$URI_JSON_PATH}
 			reverse_proxy http://sub2sing:8080
 		}
-
+		
 		handle {
-			try_files {path} /index.html
+			try_files {path} /test-backend.html
 			templates
 			file_server
 		}
+		
 	}
-}
 
+}
