--- a/docker-proxy/traefik/dynamic/3x-ui.yml
+++ b/docker-proxy/traefik/dynamic/3x-ui.yml
@@ -65,8 +65,8 @@ http:
 
     # Подписки (SUB + JSON)
     xui-sub:
-      rule: Host(`${WEBDOMAIN}`) && PathPrefix(`${URI_SUB_PATH}`)
-      # rule: Host(`${WEBDOMAIN}`) && (PathPrefix(`${URI_SUB_PATH}`) || PathPrefix(`${URI_JSON_PATH}`))
+      # rule: Host(`${WEBDOMAIN}`) && PathPrefix(`${URI_SUB_PATH}`)
+      rule: Host(`${WEBDOMAIN}`) && (PathPrefix(`${URI_SUB_PATH}`) || PathPrefix(`${URI_JSON_PATH}`))
       entryPoints:
         - websecure
       middlewares:
